// Copyright 2023 Google LLC
//
// Use of this source code is governed by an MIT-style license that can be found
// in the LICENSE file or at https://opensource.org/licenses/MIT.
syntax = "proto3";

package rrg.net;

// IP address (either IPv4 or IPv6).
message IpAddress {
  // Octets that the IP address consists of.
  //
  // Required to have 4 bytes for IPv4 and 16 bytes for IPv6 addresses.
  bytes octets = 1;
}

// Socket address (either IPv4 or IPv6).
message SocketAddress {
  // IP address associated with this socket address.
  IpAddress ip_address = 1;

  // Port number associated with this socket address.
  uint32 port = 2;
}

// MAC address as defined in the IEEE 802 standard [1].
//
// [1]: https://standards.ieee.org/wp-content/uploads/import/documents/tutorials/macgrp.pdf
message MacAddress {
  // Octets that the MAC address consists of.
  //
  // Required to have 6 bytes.
  bytes octets = 1;
}
